--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.4"
+    "angular": "^1.5.0",
+    "express": "^4.13.4",
+    "rx": "^4.0.8",
+    "rx-angular": "^1.1.3"
   },
   "devDependencies": {},
   "scripts": {
