--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "express": "^4.13.4",
+    "http": "0.0.0",
+    "http-proxy": "^1.13.2",
     "rx": "^4.0.8",
     "rx-angular": "^1.1.3"
   },
